git-svn-id: http://svn.vdombox.ru/flextools/trunk@5263 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -351,8 +351,8 @@
 					content.appendChild( XML("<![CDATA[" + 
 											"<html>" + 
 												"<head>" + 
-													"<script src='app-storage:/searchhi_slim.js'/>" +
-													"<link rel='stylesheet' href='app-storage:/main.css' type='text/css' />"+
+													"<script src='app-storage:/searchhi_slim.js'></script>" +
+													"<link rel='stylesheet' href='app-storage:/main.css' type='text/css'></link> "+
 												"</head>" +
 												"<body>"+
 													pageContent +
