--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:VBox 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
+<s:Group 
+	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
 	xmlns:containers="net.vdombox.ide.view.containers.*"
 	xmlns:controls="net.vdombox.ide.view.controls.*"
 	xmlns:components="net.vdombox.ide.view.components.*"
 	
-	verticalGap="0"
 	xmlns:controls1="com.benclinkinbeard.controls.*">
+	<s:layout>
+		<s:VerticalLayout />
+	</s:layout>
 	<mx:HBox 
 		id="buttonBar"
 		
@@ -36,14 +40,13 @@
 			id="mainViewStack"
 			
 			height="100%" styleName="vdomLogo" width="100%"/>
-		<controls1:SmoothScrollingList 
+		<s:List
 			id="applicationsList"
 			
 			height="100%"
 			itemRenderer="net.vdombox.ide.view.controls.ApplicationItemRenderer"
 			width="300"
 			
-			backgroundAlpha=".0"
-			variableRowHeight="true"/>
+			/>
 	</mx:HBox>
-</mx:VBox>
+</s:Group>
