--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
+<s:Group
+	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo" 
 	xmlns:components="net.vdombox.ide.view.components.*"
 	
-	creationPolicy="all" height="100%" horizontalScrollPolicy="off"
-	minHeight="600" minWidth="800" verticalScrollPolicy="off" width="100%">
+	height="100%"
+	minHeight="600" minWidth="800" width="100%">
+	<s:layout>
+		<s:BasicLayout />
+	</s:layout>
 	<mx:Canvas 
 		width="100%"
 		
@@ -17,15 +22,20 @@
 			
 			horizontalAlign="left" left="130"/>
 	</mx:Canvas>
-	<mx:ViewStack 
+	<mx:ViewStack
 		id="componentsStack"
 		
 		height="100%" width="100%"
 		
 		top="18">
+		
+		<mx:Box id="applicationsManagment" >
 		<components:ApplicationsManagment 
-			id="applicationsManagment"/>
-		<components:ModulesManagment 
-			id="modulesManagment"/>
+			width="100%" height="100%"/>
+		</mx:Box>
+		<mx:Box id="modulesManagment">
+		<components:ModulesManagment
+			 width="100%" height="100%"/>
+		</mx:Box>
 	</mx:ViewStack>
-</mx:Canvas>
+</s:Group>
