--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/MainTitleBar.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/MainTitleBar.mxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
+<s:Group 
+	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
 	
 	doubleClickEnabled="true" height="30" minWidth="300"
 	
 	creationComplete="creationCompleteHandler()">
-	<mx:Metadata>
+	<fx:Metadata>
 		[Event(name="logout", type="flash.events.Event")]
-	</mx:Metadata>
-	<mx:Script>
+	</fx:Metadata>
+	<fx:Script>
 		<![CDATA[
+			import mx.core.FlexGlobals;
 			import mx.core.Window;
 			import mx.managers.SystemManager;
 			import mx.core.windowClasses.TitleBar;
@@ -95,7 +98,7 @@
 
 			private function closeButton_clickHandler( event : Event ) : void
 			{
-				Application.application.exit();
+				FlexGlobals.topLevelApplication.exit();
 			}
 
 			private function mouseDownHandler( event : MouseEvent ) : void
@@ -137,7 +140,7 @@
 				dispatchEvent( new Event( "logout" ) );
 			}
 		]]>
-	</mx:Script>
+	</fx:Script>
 	<mx:Button 
 		id="minimizeButton"
 		
@@ -169,4 +172,4 @@
 		 color="#FFFFFF" fontWeight="bold" right="10" rollOverColor="#333333" selectionColor="#333333"
 		 textRollOverColor="#FFFFFF" textSelectedColor="#FFFFFF" top="24"
 		 click="logout();"/>-->
-</mx:Canvas>
+</s:Group>
