--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/ModulesManagment.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/ModulesManagment.mxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas 
-	xmlns:mx="http://www.adobe.com/2006/mxml">
+<s:Group 
+	xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo">
 	<mx:Canvas 
 		height="35" styleName="buttonBar" width="100%">
 		<mx:ToggleButtonBar 
@@ -15,4 +17,4 @@
 		height="100%" width="100%"
 		
 		top="35"/>
-</mx:Canvas>
+</s:Group>
