--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -760,6 +760,9 @@
 			<mx:Canvas width="100%" height="100%" label="Preview" show="{htmlShowHandler()}">
 				<mx:HTML id="html"   width="100%" height="100%"  />
 			</mx:Canvas>
+			<mx:Canvas width="100%" height="100%" label="WYSIWYG" >
+				<local:HTML_WYSIWYG id="html_wysiwyg"   width="100%" height="100%"  />
+			</mx:Canvas>
 		</mx:TabNavigator>
 	</mx:HDividedBox>
 	<mx:HBox horizontalAlign="right" width="100%">
