git-svn-id: http://svn.vdombox.ru/flextools/trunk@5301 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/_src/theme/css/loginForm.css
+++ b/IDE/v.01Core/_src/theme/css/loginForm.css
@@ -1,3 +1,6 @@
+@namespace "library://ns.adobe.com/flex/spark";
+@namespace mx "library://ns.adobe.com/flex/halo";
+
 .loginButtonOK {
 	
 	color: #444444;
