--- a/IDE/v.01Core/_src/theme/css/mainWindow.css
+++ b/IDE/v.01Core/_src/theme/css/mainWindow.css
@@ -1,3 +1,6 @@
+@namespace "library://ns.adobe.com/flex/spark";
+@namespace mx "library://ns.adobe.com/flex/halo";
+
 MainScreen
 {
 	backgroundImage: Embed(source="theme.swf", symbol="MainBackground");
