--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginForm.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginForm.mxml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group
-	xmlns:fx="http://ns.adobe.com/mxml/2009" 
-	xmlns:s="library://ns.adobe.com/flex/spark" 
-	xmlns:mx="library://ns.adobe.com/flex/halo" 
-	
-	width="540" height="300" xmlns:ns1="*">
+<s:Group name="Zzzzzzzz" xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo" width="550" height="300">
 	<fx:Script>
 		<![CDATA[
-			import mx.graphics.SolidColor;
+			override public function parentChanged(p:DisplayObjectContainer) : void
+			{
+				var d : * = "";
+			}
 		]]>
 	</fx:Script>
 	<s:layout>
-		<s:BasicLayout />
+		<s:BasicLayout/>
 	</s:layout>
-	<s:Rect y="25" height="275" width="100%" radiusX="15" radiusY="15" fill="{new SolidColor(0x454545)}"/>
+	<s:Rect width="100%" height="275" y="25">
+		<s:fill>
+			<s:SolidColor color="#454545" />
+		</s:fill>
+	</s:Rect>
 	<mx:Label
 		text="{resourceManager.getString('LoginForm','title')}"
 		width="440" x="90" y="40"/>
@@ -57,5 +59,5 @@
 			
 			height="35"/>
 	</s:HGroup>
-	<mx:Image x="10" width="70" height="70" source="@Embed(source='../assets/login/logo.png')" y="0"/>
+	<mx:Image x="10" width="70" height="70"  y="0"/>
 </s:Group>
