--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginForm.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginForm.mxml
@@ -1,25 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group name="Zzzzzzzz" xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo" width="550" height="300">
-	<fx:Script>
-		<![CDATA[
-			override public function parentChanged(p:DisplayObjectContainer) : void
-			{
-				var d : * = "";
-			}
-		]]>
-	</fx:Script>
-	<s:layout>
-		<s:BasicLayout/>
-	</s:layout>
-	<s:Rect width="100%" height="275" y="25">
-		<s:fill>
-			<s:SolidColor color="#454545" />
-		</s:fill>
-	</s:Rect>
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" xmlns:mx="library://ns.adobe.com/flex/halo">
 	<mx:Label
 		text="{resourceManager.getString('LoginForm','title')}"
-		width="440" x="90" y="40"/>
-	<mx:Form x="70" y="80">
+		width="440" x="90" top="0"/>
+	<mx:Form x="70" y="30">
 		<mx:FormItem
 			label="{resourceManager.getString('LoginForm','username')}">
 			<s:TextInput
@@ -48,7 +32,7 @@
 				labelField="@label" width="240"/>
 		</mx:FormItem>
 	</mx:Form>
-	<s:HGroup bottom="0" width="540">
+	<s:HGroup bottom="0" width="100%">
 		<s:Button
 			id="exitButton"
 			height="35"
@@ -59,5 +43,4 @@
 			
 			height="35"/>
 	</s:HGroup>
-	<mx:Image x="10" width="70" height="70"  y="0"/>
 </s:Group>
