git-svn-id: http://svn.vdombox.ru/flextools/trunk@5462 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/modules/First.mxml
+++ b/IDE/v.01Core/src/modules/First.mxml
@@ -9,9 +9,10 @@
 	implements="net.vdombox.ide.interfaces.IVDOMIDEModule" xmlns="modules.*" icon="modules.ZzzzButtonSkin">
 	<mx:Script>
 		<![CDATA[
+			[ResourceBundle("First")]
 			override public function get title() : String
 			{
-				return "zzzzzz";
+				return resourceManager.getString( "First", "test" );;
 			}
 		]]>
 	</mx:Script>
