--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginWindow.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/LoginWindow.mxml
@@ -1,83 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Window
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/halo"
-	xmlns:components="net.vdombox.ide.view.components.*"
-	
-	showGripper="false" showStatusBar="false" showTitleBar="false"
-	
-	width="550" height="300" preinitialize="preinitializeHandler(event)">
-	
+<s:Window xmlns:components="net.vdombox.ide.view.components.*"
+		  xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:mx="library://ns.adobe.com/flex/halo"
+		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  
+		  height="300" width="550"
+		  backgroundAlpha="0"
+		  resizable="false" showStatusBar="false" systemChrome="{ NativeWindowSystemChrome.NONE }"
+		  transparent="true"
+		  
+		  mouseDown="window_mouseDownHandler( event )">
+
 	<fx:Metadata>
-		[ResourceBundle("LoginForm") ]
+		[ ResourceBundle( "LoginForm" ) ]
 	</fx:Metadata>
 	
 	<fx:Script>
 		<![CDATA[
-			import mx.events.FlexEvent;
-			import net.vdombox.ide.view.skins.WindowSkin;
+			import flash.display.NativeWindowSystemChrome;
+			import flash.events.MouseEvent;
 
-			protected function preinitializeHandler(event:FlexEvent):void
+			import spark.components.RichEditableText;
+
+			protected function window_mouseDownHandler( event : MouseEvent ) : void
 			{
-				setStyle( "skinClass", WindowSkin );
-			}
+				var target : Object = event.target;
+				
+				if ( target is RichEditableText || target is spark.components.Button || target is mx.controls.Button )
+					return;
 
+				nativeWindow.startMove();
+				event.stopImmediatePropagation();
+			}
 		]]>
 	</fx:Script>
 	<s:layout>
 		<s:BasicLayout/>
 	</s:layout>
-	<s:Rect width="100%" height="275" y="25" radiusX="10" radiusY="10">
+	<s:Rect height="275" width="100%" y="25" radiusX="10" radiusY="10">
 		<s:fill>
-			<s:SolidColor color="#454545" />
+			
+			<mx:LinearGradient rotation="90">
+				<mx:entries>
+					<mx:GradientEntry color="0x474b50" ratio="0.00" />
+					<!--<mx:GradientEntry color="0xFEFE24" ratio="0.33" />-->
+					<mx:GradientEntry color="0x151515" ratio="0.7" />
+				</mx:entries>
+			</mx:LinearGradient>
 		</s:fill>
 	</s:Rect>
-	
-	<mx:Label
-		text="{resourceManager.getString('LoginForm','title')}"
-		width="440" x="90" y="40"/>
-	<mx:Form x="70" y="90" >
-		<mx:FormItem
-			label="{resourceManager.getString('LoginForm','username')}">
-			<s:TextInput
-				id="username"
-					
-				width="240"/>
-		</mx:FormItem>
-		<mx:FormItem
-			label="{resourceManager.getString('LoginForm','password')}">
-			<s:TextInput
-				id="password"
-					
-				width="240"/>
-		</mx:FormItem>
-		<mx:FormItem
-			label="{resourceManager.getString('LoginForm','hostname')}">
-			<s:TextInput
-				id="hostname"
-					
-				width="240"/>
-		</mx:FormItem>
-		<mx:FormItem
-			label="{resourceManager.getString('LoginForm','language')}">
-			<mx:ComboBox
-				id="selectLang"
-				labelField="@label" width="240"/>
-		</mx:FormItem>
-	</mx:Form>
-	<s:HGroup width="100%" bottom="-25">
-		<s:Button
-			id="exitButton"
-			label="{resourceManager.getString('LoginForm','quit_button')}"
-			height="35"
-			/>
-		<mx:Spacer width="100%"/>
-		<s:Button
-			id="submitButton"
-			label="{resourceManager.getString('LoginForm','ok_button')}"
-			height="35"/>
-	</s:HGroup>
-	
-	<s:BitmapImage source="@Embed(source='../assets/login/logo.png')" x="10" width="70" height="70"/>
+
+	<mx:Label text="{ resourceManager.getString( 'LoginForm', 'title' ) }" width="440" x="90" y="40"/>
+	<s:VGroup right="100" left="20" styleName="loginForm" top="100">
+		<s:HGroup width="100%" verticalAlign="middle">
+			<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }"
+					 width="100%" textAlign="right"/>
+			<s:TextInput id="username"
+						 width="240" />
+		</s:HGroup>
+		<s:HGroup width="100%" verticalAlign="middle">
+			<s:Label text="{ resourceManager.getString( 'LoginForm', 'password' ) }"
+					 width="100%" textAlign="right" />
+			<s:TextInput id="password"
+						 width="240" />
+		</s:HGroup>
+		<s:HGroup width="100%" verticalAlign="middle">
+			<s:Label text="{ resourceManager.getString( 'LoginForm', 'hostname' ) }"
+					 width="100%" textAlign="right"/>
+			<s:TextInput id="hostname"
+						 width="240" />
+		</s:HGroup>
+		<s:HGroup width="100%" verticalAlign="middle">
+			<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }"
+					 width="100%" textAlign="right"/>
+			<mx:ComboBox id="selectLang"
+						 labelField="@label" width="240" />
+		</s:HGroup>
+	</s:VGroup>
+	<s:Button id="quitButton"
+			  height="35" label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }"
+			  bottom="0" />
+	<mx:Spacer width="100%" />
+	<s:Button id="submitButton"
+			  height="35" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }"
+			  bottom="0" right="0"/>
+
+	<s:BitmapImage height="70" source="@Embed(source='../assets/login/logo.png')" width="70" x="10"/>
 </s:Window>
