--- a/IDE/v.01Core/src/net/vdombox/ide/view/skins/WindowSkin.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/skins/WindowSkin.mxml
@@ -1,72 +1,185 @@
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
-    alpha.disabledGroup="0.5" >
+<s:SparkSkin
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	
+	alpha.disabledGroup="0.5" width="500" height="400" xmlns:mx="library://ns.adobe.com/flex/halo">
+	
+	<fx:Metadata>
+		[HostComponent("Object")]
+	</fx:Metadata>
+	
+	<fx:Script>
 
-    <fx:Metadata>
-      [HostComponent("Object")]
-    </fx:Metadata>
-
-    <fx:Script>
-        /*  Define the skin elements that should not be colorized. 
-         *  For WindowedApplication, border and status bar backround are colorized,
-         *  but the content area and status text are not. 
-         *  Exclude the titleBar and scroller because they are SparkSkins and we 
-         *  don't want to colorize them twice.
-         */
-        static private const exclusions:Array = ["backgroundRect", "bgFill", "contentGroup", "statusText"];
-        override public function get colorizeExclusions():Array {return exclusions;}
-    </fx:Script>
-    
-     <s:states>
-        <s:State name="normal" />
-        <s:State name="disabled" stateGroups="disabledGroup" />
-        <s:State name="normalInactive" stateGroups="inactiveGroup" />
-        <s:State name="disabledInactive" stateGroups="disabledGroup, inactiveGroup" />
-    </s:states>
-
-    <!-- layer 1: background fill -->
-    <s:Rect id="backgroundRect" left="0" right="0" top="0" bottom="0">
-        <s:fill>
-            <s:SolidColor id="bgFill" alpha="{hostComponent.transparent ? 0 : 1}" color="{hostComponent.backgroundColor}" />
-        </s:fill>
-    </s:Rect>
-
-    <!-- layer 2: content + status bar -->
-    <s:Group left="0" right="0" top="0" bottom="0" minHeight="24" minWidth="0" >
-        <s:layout>
-            <s:VerticalLayout gap="0"/>
-        </s:layout>
-    
-        <!-- content -->
-        <s:Group id="contentGroup" width="100%" height="100%" minHeight="0" minWidth="0"/>
-        
-        <!-- status bar -->
-        <s:Group id="statusBar" width="100%" minHeight="24" >
-        
-            <!-- status bar fill -->
-            <s:Rect left="0" right="0" top="0" bottom="0">
-               <s:fill>
-                    <s:LinearGradient rotation="90">
-                        <s:GradientEntry color="0xE2E2E2" />
-                        <s:GradientEntry color="0xD9D9D9" />
-                    </s:LinearGradient>
-               </s:fill>
-            </s:Rect>
-            
-            <!-- status bar highlight -->
-            <s:Rect left="1" right="1" top="1" bottom="0" >
-               <s:stroke>
-                    <s:LinearGradientStroke rotation="90" weight="1">
-                        <s:GradientEntry color="0xEAEAEA" />
-                        <s:GradientEntry color="0xBEBEBE" />
-                    </s:LinearGradientStroke>
-               </s:stroke>
-            </s:Rect>
-        
-            <!-- status text -->
-            <s:Label id="statusText" top="2" bottom="2" left="10" right="10" verticalAlign="middle" 
-                fontSize="10" color="0x585858" width="100%" />
-
-        </s:Group> 
-    </s:Group>
-
+			import mx.collections.ArrayList;
+/*  Define the skin elements that should not be colorized. 
+		*  For WindowedApplication, border and status bar background are colorized,
+		*  but the content area and status text are not. 
+		*  Exclude the titleBar because it is a SparkSkin and we 
+		*  don't want to colorize it twice.
+		* 
+		* @langversion 3.0
+		* @playerversion Flash 10
+		* @playerversion AIR 1.5
+		* @productversion Flex 4 
+		*/
+		static private const exclusions:Array = ["backgroundRect", "contentGroup", "titleBar",
+			"titleBarBackgroundRect", "statusText",
+			"borderBgFill"];
+		
+		/** 
+		 * @inheritDoc
+		 * 
+		 * @langversion 3.0
+		 * @playerversion Flash 10
+		 * @playerversion AIR 1.5
+		 * @productversion Flex 4 
+		 */
+		override public function get colorizeExclusions():Array {return exclusions;}
+		
+	</fx:Script>
+	
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="disabled" stateGroups="disabledGroup" />
+		<s:State name="normalAndInactive" stateGroups="inactiveGroup" />
+		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup" />
+	</s:states>
+	
+	<!-- layer 1: background fill -->
+	<!--- Defines the background color of the skin. -->
+	<s:Rect id="backgroundRect" left="0" right="0" top="0" bottom="0" radiusX="7" radiusY="7">
+		<s:stroke>
+			<s:SolidColorStroke color="0xCCCCCC" weight="1" />
+		</s:stroke>
+		<s:fill>
+			<!--- @private -->
+			<s:LinearGradient id="bgFill" rotation="90">
+				<s:GradientEntry color="0x333333" />
+				<s:GradientEntry color="0x000000" />
+			</s:LinearGradient>
+		</s:fill>
+	</s:Rect>
+	<!-- title bar background fill for when the title bar is inactive -->
+	<!--- Defines the background color of the title bar. -->
+	
+	<s:Group id="topMask" left="1" right="1" top="1" bottom="1" >
+		<s:Rect width="100%" height="100%" radiusX="7" radiusY="7">
+			<s:fill>
+				<s:SolidColor color="0xCC0000" alpha="1" />
+			</s:fill>
+		</s:Rect>
+	</s:Group>
+	
+	<!-- layer 2: titlebar + content + status bar -->
+	<s:Group left="1" right="1" top="1" bottom="1" mask="{topMask}" >
+		
+		<s:TitleBar id="titleBar" skinClass="net.vdombox.ide.view.skins.SuperTitleBarSkin" width="100%" minHeight="50" alpha.inactiveGroup="0.5" />
+		
+		<!--<s:Group height="50" width="100%">
+			<s:Rect width="100%" height="100%">
+				<s:fill>
+					<s:SolidColor color="0x333333" />
+				</s:fill>
+			</s:Rect>
+		</s:Group>-->
+		
+		<s:Rect top="50" width="100%" height="25">
+			<s:fill>
+				<s:LinearGradient rotation="90">
+					<s:GradientEntry color="0xCCCCCC" />
+					<s:GradientEntry color="0x888888" />
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		
+		<s:Rect top="75" bottom="15" width="100%" height="100%" minHeight="0" minWidth="0">
+			<s:fill>
+				<s:SolidColor color="0xCC0000" />
+			</s:fill>
+		</s:Rect>
+		
+		<s:ButtonBar
+			dataProvider="{new ArrayList([1,2,3,4,5,6])}"
+			
+			height="25" top="25" left="100"/>
+		
+		<s:Group width="100%" height="25" top="50">
+			<s:layout>
+				<s:HorizontalLayout verticalAlign="middle" paddingLeft="100" />
+			</s:layout>
+			
+			<s:Group>
+				<s:layout><s:HorizontalLayout/></s:layout>
+				<s:Button />
+				<s:Button />
+				<s:Button />
+				<s:Button />
+			</s:Group>
+			<mx:Spacer width="100%" />
+			<s:Button width="70"/>
+		</s:Group>
+		
+		<!-- content -->
+		<!--- Defines the Group container where the content children get pushed into and laid out. -->
+		<s:Group id="contentGroup"
+				 top="75" width="100%" height="100%" minHeight="0" minWidth="0"/>
+		
+		<!-- status bar -->
+		<!--- Defines the Group container for the status bar. -->
+		<s:Group id="statusBar"
+				 bottom="0" width="100%" minHeight="15" >
+			
+			<!-- status bar fill -->
+			<s:Rect left="0" right="0" top="0" bottom="0">
+				<s:fill>
+					<s:SolidColor color="0xCCCCCC" />
+				</s:fill>
+			</s:Rect>
+			
+			<!-- status bar highlight -->
+			<s:Rect left="1" right="1" top="1" bottom="0" >
+				<s:stroke>
+					<s:SolidColorStroke color="0xCCCCCC" />
+				</s:stroke>
+			</s:Rect>
+			
+			<!-- status text -->
+			<!--- Defines the Label control for the text in the status bar. -->
+			<s:Label id="statusText" top="2" bottom="2" left="10" right="10" verticalAlign="middle" 
+					 fontSize="10" color="0x585858" width="100%" maxDisplayedLines="1" />
+			
+		</s:Group> 
+		
+	</s:Group>
+	<s:BitmapImage smooth="false" source="@Embed('assets/main/vdom_logo.png')" x.normal="20" y.normal="20"/>
+	<!-- layer 3: gripper -->
+	<!--- 
+	Defines the Button control for the gripper button. 
+	By default, the button uses the spark.skins.spark.windowChrome.GripperSkin class
+	to define the skin for the gripper button.
+	
+	@see spark.skins.spark.windowChrome.GripperSkin 
+	-->
+	<s:Button id="gripper" right="3" bottom="3" tabEnabled="false" 
+			  skinClass="spark.skins.spark.windowChrome.GripperSkin" /> 
+	
+	<!-- layer 4: border -->
+	
+	<!-- background of border for when it is alpha=0.5 -->
+	<!--- Defines the background color of the border. -->
+	<!--<s:Group id="borderBgFill" left="0" right="0" top="0" bottom="0" >
+		<s:Rect left="0" right="0" top="0" bottom="0">
+			<s:stroke>
+				<s:SolidColorStroke weight="1" color="0xFFFFFF" />
+			</s:stroke>
+		</s:Rect>
+	</s:Group>-->
+	
+	<!-- the border -->
+	<!--<s:Rect left="0" right="0" top="0" bottom="0">
+		<s:stroke>
+			<s:SolidColorStroke alpha.inactiveGroup="0.5" weight="1" color="0xA6A6A6" />
+		</s:stroke>
+	</s:Rect>-->
+	
 </s:SparkSkin>
