--- a/IDE/v.01Core/src/modules/First.mxml
+++ b/IDE/v.01Core/src/modules/First.mxml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<VDOMIDEModule 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
-	
-	height="100%"  layout="absolute"
-	width="100%"
-	
-	borderColor="#000000" borderStyle="solid"
-	implements="net.vdombox.ide.interfaces.IVDOMIDEModule" xmlns="modules.*" icon="modules.ZzzzButtonSkin">
+<VDOMIDEModule xmlns:mx="http://www.adobe.com/2006/mxml"
+			   height="100%" icon="modules.ZzzzButtonSkin" layout="absolute" width="100%"
+			   borderColor="#000000" borderStyle="solid"
+			   
+			   implements="net.vdombox.ide.interfaces.IVDOMIDEModule" xmlns="modules.*">
 	<mx:Script>
 		<![CDATA[
-			[ResourceBundle("First")]
+			import flash.events.MouseEvent;
+			
+			import mx.core.FlexGlobals;
+			import mx.core.UIComponent;
+
+			[ResourceBundle( "First" )]
 			override public function get title() : String
 			{
-				return resourceManager.getString( "First", "test" );;
+				return resourceManager.getString( "First", "test" );
+				;
+			}
+
+			public function get toolset() : UIComponent
+			{
+				var toolsetButton : Button = new Button();
+				toolsetButton.addEventListener( MouseEvent.CLICK, tbClickHadler )
+				toolsetButton.label = title;
+				return toolsetButton;
+			}
+
+			public function tbClickHadler( event : MouseEvent ) : void
+			{
+				var d : * = "";
+				var application : * = FlexGlobals;
 			}
 		]]>
 	</mx:Script>
 	<mx:Button 
-		label="First module" x="10" y="10"/>
+			   label="First module" x="10" y="10"/>
 </VDOMIDEModule>
