--- a/IDE/v.01Core/src/net/vdombox/ide/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/skins/MainWindowSkin.mxml
@@ -1,41 +1,53 @@
 <s:SparkSkin
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:mx="library://ns.adobe.com/flex/halo"
 	
-	alpha.disabledGroup="0.5" width="500" height="400" xmlns:mx="library://ns.adobe.com/flex/halo">
+	alpha.disabledGroup="0.5" width="500" height="400"
+	
+	creationComplete="creationCompleteHandler(event)">
 	
 	<fx:Metadata>
 		[HostComponent("Object")]
 	</fx:Metadata>
 	
 	<fx:Script>
-
-			import mx.collections.ArrayList;
-/*  Define the skin elements that should not be colorized. 
-		*  For WindowedApplication, border and status bar background are colorized,
-		*  but the content area and status text are not. 
-		*  Exclude the titleBar because it is a SparkSkin and we 
-		*  don't want to colorize it twice.
-		* 
-		* @langversion 3.0
-		* @playerversion Flash 10
-		* @playerversion AIR 1.5
-		* @productversion Flex 4 
-		*/
-		static private const exclusions:Array = ["backgroundRect", "contentGroup", "titleBar",
-			"titleBarBackgroundRect", "statusText",
-			"borderBgFill"];
-		
-		/** 
-		 * @inheritDoc
-		 * 
+	<![CDATA[
+		import mx.collections.ArrayList;
+		import mx.events.FlexEvent;
+		import mx.logging.ILogger;
+		import mx.logging.Log;
+		/*  Define the skin elements that should not be colorized.
+		 *  For WindowedApplication, border and status bar background are colorized,
+		 *  but the content area and status text are not.
+		 *  Exclude the titleBar because it is a SparkSkin and we
+		 *  don't want to colorize it twice.
+		 *
 		 * @langversion 3.0
 		 * @playerversion Flash 10
 		 * @playerversion AIR 1.5
-		 * @productversion Flex 4 
+		 * @productversion Flex 4
+		 */
+		static private const exclusions:Array = ["backgroundRect", "contentGroup", "titleBar",
+												 "titleBarBackgroundRect", "statusText",
+												 "borderBgFill"];
+
+		/**
+		 * @inheritDoc
+		 *
+		 * @langversion 3.0
+		 * @playerversion Flash 10
+		 * @playerversion AIR 1.5
+		 * @productversion Flex 4
 		 */
 		override public function get colorizeExclusions():Array {return exclusions;}
 		
+		protected function creationCompleteHandler(event:FlexEvent):void
+		{
+			var log : ILogger = Log.getLogger("CusLog");
+			log.debug("test message");
+		}
+	]]>
 	</fx:Script>
 	
 	<s:states>
@@ -73,15 +85,15 @@
 	<!-- layer 2: titlebar + content + status bar -->
 	<s:Group left="1" right="1" top="1" bottom="1" mask="{topMask}" >
 		
-		<s:TitleBar id="titleBar" skinClass="net.vdombox.ide.view.skins.SuperTitleBarSkin" width="100%" minHeight="50" alpha.inactiveGroup="0.5" />
+		<!--<s:TitleBar id="titleBar" skinClass="net.vdombox.ide.view.skins.SuperTitleBarSkin" width="100%" minHeight="50" alpha.inactiveGroup="0.5" />-->
 		
-		<!--<s:Group height="50" width="100%">
+		<s:Group height="50" width="100%">
 			<s:Rect width="100%" height="100%">
 				<s:fill>
 					<s:SolidColor color="0x333333" />
 				</s:fill>
 			</s:Rect>
-		</s:Group>-->
+		</s:Group>
 		
 		<s:Rect top="50" width="100%" height="25">
 			<s:fill>
@@ -98,7 +110,7 @@
 			</s:fill>
 		</s:Rect>
 		
-		<s:ButtonBar
+		<s:ButtonBar id="tabBar"
 			dataProvider="{new ArrayList([1,2,3,4,5,6])}"
 			
 			height="25" top="25" left="100"/>
@@ -108,13 +120,12 @@
 				<s:HorizontalLayout verticalAlign="middle" paddingLeft="100" />
 			</s:layout>
 			
-			<s:Group>
-				<s:layout><s:HorizontalLayout/></s:layout>
-				<s:Button />
-				<s:Button />
-				<s:Button />
-				<s:Button />
+			<s:Group id="toolsetBar">
+				<s:layout>
+					<s:HorizontalLayout/>
+				</s:layout>
 			</s:Group>
+			
 			<mx:Spacer width="100%" />
 			<s:Button width="70"/>
 		</s:Group>
