git-svn-id: http://svn.vdombox.ru/flextools/trunk@5472 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/modules/First.mxml
+++ b/IDE/v.01Core/src/modules/First.mxml
@@ -3,7 +3,7 @@
 			   height="100%" icon="modules.ZzzzButtonSkin" layout="absolute" width="100%"
 			   borderColor="#000000" borderStyle="solid"
 			   
-			   implements="net.vdombox.ide.interfaces.IVDOMIDEModule" xmlns="modules.*">
+			  xmlns="modules.*">
 	<mx:Script>
 		<![CDATA[
 			import flash.events.MouseEvent;
