--- a/IDE/v.01Core/src/modules/Second.mxml
+++ b/IDE/v.01Core/src/modules/Second.mxml
@@ -5,7 +5,7 @@
 	height="100%" layout="absolute" width="100%"
 	
 	borderColor="#000000" borderStyle="solid"
-	implements="net.vdombox.ide.interfaces.IVDOMIDEModule" xmlns="modules.*">
+	xmlns="modules.*">
 	<mx:Script>
 		<![CDATA[
 			import mx.core.UIComponent;
