--- a/IDE/v.01Core/src/net/vdombox/ide/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/skins/MainWindowSkin.mxml
@@ -113,6 +113,7 @@
 		<s:ButtonBar id="tabBar"
 			dataProvider="{new ArrayList([1,2,3,4,5,6])}"
 			
+			requireSelection="true"
 			height="25" top="25" left="100"/>
 		
 		<s:Group width="100%" height="25" top="50">
