--- a/IDE/v.01Core/src/VdomIDE.mxml
+++ b/IDE/v.01Core/src/VdomIDE.mxml
@@ -10,6 +10,8 @@
 
 	<fx:Script>
 		<![CDATA[
+			import flash.display.LoaderInfo;
+			
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.core.ApplicationFacade;
@@ -30,7 +32,15 @@
 
 			protected function application_applicationCompleteHandler() : void
 			{
+//				loaderInfo.uncaughtErrorEvents.addEventListener( UncaughtErrorEvent.UNCAUGHT_ERROR, uncaughtErrorHandler, true )
 				facade.startup( this );
+			}
+			
+			private function uncaughtErrorHandler( event : UncaughtErrorEvent ) : void
+			{
+				
+				event.stopImmediatePropagation();
+				event.preventDefault();
 			}
 		]]>
 	</fx:Script>
