git-svn-id: http://svn.vdombox.ru/flextools/trunk@5556 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -4,8 +4,16 @@
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 
 		 width="100%" height="100%">
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-	<s:Label text="ApplicationsManagmentModule" horizontalCenter="0" verticalCenter="0" fontWeight="bold"/>
+	
+	<s:layout>
+		<s:HorizontalLayout />
+	</s:layout>
+	
+	<s:Group width="100%" height="100%" />
+	<s:List id="applicationsList"
+		width="200" height="100%"></s:List>
 </s:Group>
