--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -15,5 +15,5 @@
 	
 	<s:Group width="100%" height="100%" />
 	<s:List id="applicationsList"
-		width="200" height="100%"></s:List>
+		width="200" height="100%"/>
 </s:Group>
