--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -2,6 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
 		 
 		 width="100%" height="100%">
 	
@@ -13,7 +14,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 	
-	<s:Group width="100%" height="100%" />
+	<components:ApplicationProperties id="applicationProperties"
+		width="100%" height="100%"/>
 	<s:List id="applicationsList"
 		width="200" height="100%"/>
 </s:Group>
