--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
@@ -3,16 +3,24 @@
 				xmlns:s="library://ns.adobe.com/flex/spark" 
 				xmlns:mx="library://ns.adobe.com/flex/halo"
 				
+				width="100%" height="50"
+				
 				creationComplete="creationCompleteHandler( event )">
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
-			
-			public static const RENDERER_CREATED:String = "rendererCreated";
-			
+
+			public static const RENDERER_CREATED : String = "rendererCreated";
+
+			override public function set data( value : Object ) : void
+			{
+				super.data = value;
+				nameLabel.text = value.name;
+			}
+
 			protected function creationCompleteHandler( event : FlexEvent ) : void
 			{
-				dispatchEvent( new Event( RENDERER_CREATED ) );
+				dispatchEvent( new Event( RENDERER_CREATED ));
 			}
 		]]>
 	</fx:Script>
@@ -20,6 +28,8 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<!--<s:layout><s:HorizontalLayout /></s:layout>-->
 	
 	<s:states>
 		<s:State name="normal" />
@@ -33,7 +43,10 @@
 						  alpha.selected="0.6" />
 		</s:fill>
 	</s:Rect>
+	<mx:Image id="imageHolder"
+			  width="50" height="50" />
 	
-	<s:Label id="nameLabel" text="{data.name}" top="5" left="5" right="5" />
+	<s:Label id="nameLabel"
+			 width="100%" left="50" />
 	
 </s:ItemRenderer>
