--- a/IDE/v.02/modules/Edition/src/net/vdombox/ide/modules/edition/view/components/Body.mxml
+++ b/IDE/v.02/modules/Edition/src/net/vdombox/ide/modules/edition/view/components/Body.mxml
@@ -2,9 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 xmlns:components="net.vdombox.ide.modules.applicationsManagment.view.components.*"
-		 
-		 width="100%" height="100%">
+		 xmlns:components="net.vdombox.ide.modules.edition.view.components.*">
 	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -14,6 +12,5 @@
 		<s:HorizontalLayout />
 	</s:layout>
 	
-	<s:List id="applicationsList"
-		width="200" height="100%"/>
+	<components:TypeAccordion />
 </s:Group>
