--- a/IDE/v.02/modules/Edition/src/net/vdombox/ide/modules/edition/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Edition/src/net/vdombox/ide/modules/edition/view/components/Toolset.mxml
@@ -4,18 +4,21 @@
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 
 		 implements="net.vdombox.ide.common.IToolset">
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.IToolset;
 			
 		]]>
 	</fx:Script>
+	
 	<s:layout>
 		<s:HorizontalLayout />
 	</s:layout>
-	<s:ToggleButton label="New Application"/>
-	<s:Button  label="Export"/>
+	
+	<s:Button label="Edition"/>
 </s:Group>
