git-svn-id: http://svn.vdombox.ru/flextools/trunk@5604 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -126,7 +126,7 @@
 			var fullPath : String = newFile.url;
 //			var f : File = File.applicationStorageDirectory; 
 			html.location = fullPath; 
-//			html_wysiwyg.setHTML( "fullPath");
+			html_wysiwyg.setHTML( "fullPath");
 		}
 		
 		
