--- a/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
+++ b/Help/Editor/v.01/src/HTML_WYSIWYG.mxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HTML xmlns:mx="http://www.adobe.com/2006/mxml" location="tinymce/examples/full.html" htmlDOMInitialize="rrr()" creationComplete="init()">
+<mx:HTML xmlns:mx="http://www.adobe.com/2006/mxml" 
+	location="libs/tinymce/examples/full.html" 
+	htmlDOMInitialize="rrr()" 
+	creationComplete="init()" width="100%" height="100%">
 	<mx:Script>
 		<![CDATA[
 			private function init():void
