--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ProgressView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ProgressView.mxml
@@ -2,9 +2,8 @@
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/halo">
-	<s:Group id="place" left="100" top="100" width="100%" height="100%">
-		<s:layout>
-			<s:VerticalLayout />
-		</s:layout>
+	<s:Group id="place"
+			left="100" top="100" width="100%" height="100%">
+		<s:layout><s:VerticalLayout /></s:layout>
 	</s:Group>
 </s:NavigatorContent>
