git-svn-id: http://svn.vdombox.ru/flextools/trunk@5608 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -26,7 +26,7 @@
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }"
 					 width="100%" textAlign="right"/>
 			<mx:ComboBox id="selectLang"
-						 labelField="@label" width="240" />
+						 width="240" />
 		</s:HGroup>
 	</s:VGroup>
 	<s:Button id="submitButton"
