--- a/IDE/v.02/core/src/VdomIDE.mxml
+++ b/IDE/v.02/core/src/VdomIDE.mxml
@@ -15,7 +15,7 @@
 			
 			import net.vdombox.ide.core.ApplicationFacade;
 			
-			public static const NAME : String = "VDOMIDE";
+			public static const NAME : String = "VdomIDE";
 
 			private var facade : ApplicationFacade = ApplicationFacade.getInstance( NAME );
 
