--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/SettingsScreen.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/SettingsScreen.mxml
@@ -2,5 +2,5 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/halo" width="100%" height="100%">
-	<s:Label text="Settings application managment" horizontalCenter="0" verticalCenter="0"/>
+	<s:Label text="Settings application managment" horizontalCenter="0" verticalCenter="0" id="labelID"/>
 </s:Group>
