--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationProperties.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationProperties.mxml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/halo" width="400" height="300">
+		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 
+		 width="100%" height="100%">
 	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
-	<s:layout>
-		<s:VerticalLayout />
-	</s:layout>
-	
-	<s:Label id="applicationName"/>
-	<s:Label id="applicationDescription"/>
-	
+	<s:VGroup horizontalCenter="0" verticalCenter="0">
+		<s:Label id="applicationName"/>
+		<s:Label id="applicationDescription"/>	
+	</s:VGroup>
 </s:Group>
