git-svn-id: http://svn.vdombox.ru/flextools/trunk@5641 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Body.mxml
@@ -17,5 +17,5 @@
 	<components:ApplicationProperties id="applicationProperties"
 		width="100%" height="100%"/>
 	<s:List id="applicationsList"
-		width="200" height="100%"/>
+		width="270" height="100%" useVirtualLayout="false" />
 </s:Group>
