--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
@@ -3,19 +3,29 @@
 				xmlns:s="library://ns.adobe.com/flex/spark" 
 				xmlns:mx="library://ns.adobe.com/flex/halo"
 				
-				width="100%" height="50"
+				width="100%" height="115"
+				buttonMode="true"
 				
-				creationComplete="creationCompleteHandler( event )">
+				creationComplete="creationCompleteHandler( event )" >
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
+			
+			import net.vdombox.ide.common.vo.ApplicationVO;
 
 			public static const RENDERER_CREATED : String = "rendererCreated";
 
 			override public function set data( value : Object ) : void
 			{
+				var applicationVO : ApplicationVO = value as ApplicationVO;
+				
+				nameLabel.text = applicationVO.name;
+				description.text = applicationVO.description;
+				
+				pagesCount.text = "Pages: " + applicationVO.numberOfPages.toString();
+				objectsCount.text = "Objects: " + applicationVO.numberOfObjects.toString();
+				
 				super.data = value;
-				nameLabel.text = value.name;
 			}
 
 			protected function creationCompleteHandler( event : FlexEvent ) : void
@@ -43,10 +53,24 @@
 						  alpha.selected="0.6" />
 		</s:fill>
 	</s:Rect>
+	<s:Rect width="90" height="95" top="10" left="10">
+		<s:stroke>
+			<s:SolidColorStroke color="black" />
+		</s:stroke>
+	</s:Rect>
 	<mx:Image id="imageHolder"
-			  width="50" height="50" />
+			  width="50" height="50" left="30" top="30"/>
 	
 	<s:Label id="nameLabel"
-			 width="100%" left="50" />
+			 left="110" fontWeight="bold" top="10" width="100%" right="10"/>
+	
+	<s:RichText id="description"
+				right="10" left="110" top="35" bottom="40"/>
+	
+	<s:Label id="pagesCount"
+		bottom="10" right="10"/>
+	
+	<s:Label id="objectsCount"
+		bottom="25" right="10"/>
 	
 </s:ItemRenderer>
