--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationProperties.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationProperties.mxml
@@ -9,8 +9,66 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
-	<s:VGroup horizontalCenter="0" verticalCenter="0">
-		<s:Label id="applicationName"/>
-		<s:Label id="applicationDescription"/>	
+	<s:states>
+		<s:State name="default"/>
+		<s:State name="changeIcon"/>
+		<s:State name="changeName"/>
+		<s:State name="changeDescription"/>
+		<s:State name="deleteApplication"/>
+	</s:states>
+	
+	<s:VGroup left="30" top="30" right="30" bottom="30" >
+		
+		<s:Label id="applicationName" fontFamily="Verdana" fontSize="24" fontWeight="bold"/>
+		<s:Label id="pagesCount" fontFamily="Verdana" fontSize="12" fontWeight="bold"/>
+		<s:Label id="objectsCount" fontFamily="Verdana" fontSize="12" fontWeight="bold"/>
+		
+		<s:Scroller width="100%" minHeight="50" maxHeight="200">
+			<s:Group>	
+				<s:RichText id="applicationDescription"	width="100%"/>
+			</s:Group>
+		</s:Scroller>
+		
+		<s:Label id="actionsForLabel"
+			text="Actions for {0}" fontFamily="Verdana" fontSize="18" />
+		
+		<s:Label text="Change icon:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
+				 click="currentState='changeIcon'"/>
+		<s:VGroup includeIn="changeIcon" width="100%">
+			<s:TextInput />
+			<s:Button label="Save" click="currentState='default'"/>
+		</s:VGroup>
+		
+		<s:Label text="Change name:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
+				 click="currentState='changeName'"/>
+		<s:VGroup includeIn="changeName" width="100%">
+			<s:TextInput />
+			<s:Button label="Save" click="currentState='default'"/>
+		</s:VGroup>
+		
+		<s:Label text="Edit Description:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
+				 click="currentState='changeDescription'"/>
+		<s:VGroup includeIn="changeDescription" width="100%">
+			<s:Group width="100%" height="50">
+				<s:Rect width="100%" height="100%">
+					<s:stroke>
+						<s:SolidColorStroke color="black" />
+					</s:stroke>
+					<s:fill>
+						<s:SolidColor color="white" />
+					</s:fill>
+				</s:Rect>
+				<s:RichEditableText width="100%" height="100%"/>
+			</s:Group>
+			<s:Button label="Save" click="currentState='default'"/>
+		</s:VGroup>
+		
+		<s:Label text="Delete Application:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
+				 click="currentState='deleteApplication'"/>
+		<s:HGroup includeIn="deleteApplication" width="100%">
+			<s:Button label="Cancel" click="currentState='default'"/>
+			<s:Button label="Apply" click="currentState='default'"/>
+		</s:HGroup>
 	</s:VGroup>
+
 </s:Group>
