git-svn-id: http://svn.vdombox.ru/flextools/trunk@5646 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
@@ -3,7 +3,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 
-		 implements="net.vdombox.ide.common.IToolset">
+		 implements="net.vdombox.ide.common.interfaces.IToolset">
 	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
@@ -11,7 +11,7 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.IToolset;
+			import net.vdombox.ide.common.interfaces.IToolset;
 			
 		]]>
 	</fx:Script>
