git-svn-id: http://svn.vdombox.ru/flextools/trunk@5650 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/v.01/vdom/controls/resourceBrowser/ListItem.mxml
@@ -62,7 +62,14 @@
 				imageSourceLoader = new Loader();
 				imageSourceLoader.contentLoaderInfo.addEventListener(IOErrorEvent.IO_ERROR, ioErrorHandler);
 				imageSourceLoader.contentLoaderInfo.addEventListener(Event.COMPLETE, imageLoaded);
-				imageSourceLoader.loadBytes(ByteArray(source.data));
+				if( ByteArray(source.data).length )
+				{
+					imageSourceLoader.loadBytes(ByteArray(source.data));
+				}
+				else
+				{
+					var d : * = "";
+				}
 			}
 
 			private function ioErrorHandler(ioEvent:IOErrorEvent):void {
