git-svn-id: http://svn.vdombox.ru/flextools/trunk@5651 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/Toolset.mxml
@@ -4,18 +4,22 @@
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 
 		 implements="net.vdombox.ide.common.interfaces.IToolset">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+	
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.interfaces.IToolset;
 			
 		]]>
 	</fx:Script>
+	
 	<s:layout>
 		<s:HorizontalLayout />
 	</s:layout>
-	<s:ToggleButton label="New Application"/>
+	
+	<s:ToggleButton id="createNewApplicatoin"
+					label="New Application"
+					click="dispatchEvent( new Event( 'createNewApplication' ) )"/>
+	
 	<s:Button  label="Export"/>
+	
 </s:Group>
