--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
@@ -6,7 +6,7 @@
 					width="100%" height="100%">
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.modules.applicationsManagment.events.CreateApplicationEvent;
+			import net.vdombox.ide.modules.applicationsManagment.events.CreateApplicationViewEvent;
 		]]>
 	</fx:Script>
 	
@@ -28,7 +28,7 @@
 				  width="64" height="64"/>
 		
 		<s:Label text="Select from gallery" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-				 click="dispatchEvent( new CreateApplicationEvent( CreateApplicationEvent.SHOW_ICONS_GALLERY ))"/>
+				 click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.SHOW_ICONS_GALLERY ))"/>
 		
 		<s:List id="itemList"
 				width="100%" height="100" includeIn="gallery" itemCreationPolicy="immediate"
@@ -39,7 +39,7 @@
 		</s:List>
 		
 		<s:Label text="Load from computer" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
-				 click="dispatchEvent( new CreateApplicationEvent( CreateApplicationEvent.LOAD_ICON ))" />
+				 click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.LOAD_ICON ))" />
 		
 		<s:HGroup width="100%">
 			
@@ -72,10 +72,10 @@
 		<s:HGroup>
 			<s:Button id="saveButton"
 					  label="Save" enabled="false"
-					  click="dispatchEvent( new CreateApplicationEvent( CreateApplicationEvent.SAVE ) )" />
+					  click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.SAVE ) )" />
 			
 			<s:Button label="Cancel" 
-					  click="dispatchEvent( new CreateApplicationEvent( CreateApplicationEvent.CANCEL ) )" />
+					  click="dispatchEvent( new CreateApplicationViewEvent( CreateApplicationViewEvent.CANCEL ) )" />
 		</s:HGroup>
 		
 	</s:VGroup>
