git-svn-id: http://svn.vdombox.ru/flextools/trunk@5674 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/EditApplicationView.mxml
@@ -49,7 +49,7 @@
 			<s:Label text="Change name:" textDecoration="underline" fontFamily="Verdana" fontSize="14" buttonMode="true"
 					 click="currentState='changeName'" />
 			<s:VGroup includeIn="changeName" width="100%">
-				<s:TextInput />
+				<s:TextInput id="newApplicationName"/>
 				<s:Button label="Save" click="currentState='default';dispatchEvent( new EditApplicationViewEvent( EditApplicationViewEvent.APPLICATION_NAME_CHANGED ) )" />
 			</s:VGroup>
 			
