git-svn-id: http://svn.vdombox.ru/flextools/trunk@5715 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Toolset.mxml
@@ -5,10 +5,6 @@
 		 
 		 implements="net.vdombox.ide.common.interfaces.IToolset">
 	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.interfaces.IToolset;
@@ -20,5 +16,5 @@
 		<s:HorizontalLayout />
 	</s:layout>
 	
-	<s:Button label="wysiwyg"/>
+	<s:ToggleButton label="Wysiwyg" />
 </s:Group>
