--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
+<s:HGroup 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
 	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+	height="100%" width="100%">
 	
-	<s:layout>
-		<s:HorizontalLayout />
-	</s:layout>
+	<s:List id="resourceList"
+		height="100%" labelField="name" width="200" />
 	
-	<components:TypeAccordion id="typeAccordion"/>
-</s:Group>
+	<s:VGroup 
+		height="100%" width="100%">
+		
+		<s:Group
+			width="100%" height="100%">
+			
+			<s:layout>
+				<s:VerticalLayout />
+			</s:layout>
+			
+			<mx:Image id="preview"
+				width="100%" height="100%"
+				horizontalCenter="0" verticalCenter="0"/>
+			<s:Button
+				label="Delete"
+				click="dispatchEvent( new Event('deleteResource') )"/>
+		</s:Group>
+	</s:VGroup>
+</s:HGroup>
